# Arconte

./: .dockerignore  .env.example  .env.production.example  .gitignore  ANALISIS_PROFUNDO_PROYECTO.md  ARCONTE_DOCUMENTACION_MAESTRA.md  ARREGLOS_FINALES.md  CAMBIOS_FRONTEND.md  COMO_PROBAR_ARCONTE.md  DEPLOYMENT_COMPLETO.md  DIAGNOSTICO_ERRORES.md  ESTRUCTURA_LIMPIA.md  ESTRUCTURA_PROYECTO.md  FASES_3_Y_4_PENDIENTES.md  FASE_0_COMPLETADA.md  FASE_1_COMPLETADA.md  FASE_2_PROGRESO.md  GUIA_MAESTRA.md  INICIO_RAPIDO.md  LIMPIEZA_GIT.md  PRODUCTION_DEPLOYMENT.md  QUICK_START.md  README.dev.md  README.md  REINICIAR_SERVICIOS.bat  ROADMAP_ARCONTE.md  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  start-backend.bat  start-frontend.bat
.husky/: pre-push
.stable-versions/: README.md  VERSION_LOG.md
apps/ingest_py/: .env.example  .gitignore  API_EXAMPLES.md  AUTOS_VIGILANCIA.md  README.md  pyproject.toml  requirements.txt  run_persistent.py  run_with_scheduler.py  test_auto_detection.py
apps/ingest_py/src/: main.py
apps/ingest_py/src/analyzers/: __init__.py  auto_classifier.py  document_extractor.py
apps/ingest_py/src/clients/: jurisprudencia.py  rama_client.py  ramajud.py  resilience.py
apps/ingest_py/src/normalizers/: rama.py
apps/ingest_py/src/notifications/: __init__.py  notifier.py
apps/ingest_py/src/pipelines/: diff.py
apps/ingest_py/src/sched/: cron.py
apps/ingest_py/src/scrapers/: playwright_scraper.py  ramajud_scraper.py
apps/ingest_py/src/storage/: dao.py
apps/ingest_py/src/utils/: log.py  rate.py  retry.py
(+487 files in other folders)
